apps/adaptsg-dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adaptsg-dev
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: adaptsg
    app.kubernetes.io/instance: adaptsg-dev
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
